--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   plex:
-    image: linuxserver/plex:latest
+    image: linuxserver/plex
     ports:
       - "32400:32400"
     deploy:
@@ -16,7 +16,9 @@ services:
       - /data/plex/transcode:/transcode
       - /home/plex:/data
     environment:
-      - HOSTNAME=tea
       - PUID=1001
       - PGID=1001
       - ALLOWED_NETWORKS="192.168.2.0/255"
+
+networks:
+  ingress:
